--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,9 +88,9 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 单文件上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">三级导航</a></li>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">三级导航</a></li>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">三级导航</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例三</a></li>
                 </ul>
             </dd>
         </dl>
@@ -98,7 +98,9 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 多文件上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">三级导航</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例三</a></li>
                 </ul>
             </dd>
         </dl>
@@ -109,7 +111,7 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 下载<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">三级导航</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
                 </ul>
             </dd>
         </dl>
@@ -120,8 +122,8 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 单个图片上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">不压缩</a></li>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">压缩</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一:不压缩</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二:压缩</a></li>
                 </ul>
             </dd>
         </dl>
@@ -129,8 +131,8 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 多个图片上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">不压缩</a></li>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">压缩</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一:不压缩</a></li>
+                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二:压缩</a></li>
                 </ul>
             </dd>
         </dl>
@@ -161,7 +163,7 @@
         <div class="Hui-tabNav-wp">
             <ul id="min_title_list" class="acrossTab cl">
                 <li class="active">
-                    <span title="我的桌面" data-href="welcome.html">我的桌面</span>
+                    <span title="我的桌面" data-href="welcome.do">我的桌面</span>
                     <em></em></li>
             </ul>
         </div>
@@ -170,7 +172,7 @@
     <div id="iframe_box" class="Hui-article">
         <div class="show_iframe">
             <div style="display:none" class="loading"></div>
-            <iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>
+            <iframe scrolling="yes" frameborder="0" src="welcome.do"></iframe>
         </div>
     </div>
 </section>
