--- a/src/main/resources/templates/file/file-list.html
+++ b/src/main/resources/templates/file/file-list.html
@@ -26,47 +26,35 @@
 <div class="page-container">
     <div class="text-c">
         <form class="Huiform" method="post" action="" target="_self">
-            <input type="text" placeholder="分类名称" value="" class="input-text" style="width:120px"/>
-            <span class="btn-upload form-group">
-			<input class="input-text upload-url" type="text" name="uploadfile-2" id="uploadfile-2" readonly="readonly" style="width:200px" />
-			<a href="javascript:void();" class="btn btn-primary upload-btn"><i class="Hui-iconfont">&#xe642;</i> 上传logo</a>
-			<input type="file" multiple="multiple" name="file-2" class="input-file"/>
-			</span>
-            <span class="select-box" style="width:150px">
-			<select class="select" name="brandclass" size="1">
-				<option value="1" selected="selected">国内品牌</option>
-				<option value="0">国外品牌</option>
-			</select>
-			</span><button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);"><i class="Hui-iconfont">&#xe600;</i> 添加</button>
+            <span   value="路径" style="width:120px">路径：</span>
+            <input type="text" style="width: 240px;height: 30px" />
+			<button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);">确定</button>
         </form>
     </div>
-    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
-    <div class="mt-20">
-        <table class="table table-border table-bordered table-bg table-sort">
-            <thead>
-            <tr class="text-c">
-                <th width="25"><input type="checkbox" name="" value=""/></th>
-                <th width="70">ID</th>
-                <th width="80">排序</th>
-                <th width="200">LOGO</th>
-                <th width="120">品牌名称</th>
-                <th>具体描述</th>
-                <th width="100">操作</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr class="text-c">
-                <td><input name="" type="checkbox" value=""/></td>
-                <td>1</td>
-                <td><input type="text" class="input-text text-c" value="1"/></td>
-                <td><img src="../h-ui/temp/brand/dongpeng.jpeg"/></td>
-                <td class="text-l"><img title="国内品牌" src="../h-ui/static/h-ui.admin/images/cn.gif"/> 东鹏</td>
-                <td class="text-l">东鹏陶瓷被评为“中国名牌”、“国家免检产品”、“中国驰名商标”、http://www.dongpeng.net/</td>
-                <td class="f-14 product-brand-manage"><a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <div class="text-c" style="height: 30px;"></div>
+    <table class="table table-border table-bordered table-bg">
+        <thead>
+        <tr>
+            <th scope="col" colspan="7">文件列表</th>
+        </tr>
+        <tr class="text-c">
+            <th width="25"><input type="checkbox" name="" value=""/></th>
+            <th width="40">ID</th>
+            <th width="200">权限名称</th>
+            <th>字段名</th>
+            <th width="100">操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="text-c">
+            <td><input type="checkbox" value="1" name=""/></td>
+            <td>1</td>
+            <td>栏目添加</td>
+            <td></td>
+            <td><a title="编辑" href="javascript:;" onclick="admin_permission_edit('角色编辑','admin-permission-add.html','1','','310')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_permission_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <!--_footer 作为公共模版分离出去-->
 <script type="text/javascript" src="../h-ui/lib/jquery/1.9.1/jquery.min.js"></script>
