--- a/src/main/resources/templates/file/file-list.html
+++ b/src/main/resources/templates/file/file-list.html
@@ -38,21 +38,36 @@
             <th scope="col" colspan="7">文件列表</th>
         </tr>
         <tr class="text-c">
-            <th width="25"><input type="checkbox" name="" value=""/></th>
-            <th width="40">ID</th>
-            <th width="200">权限名称</th>
-            <th>字段名</th>
-            <th width="100">操作</th>
+            <th width="100">文件权限</th>
+            <th width="100">最后修改时间</th>
+            <th width="100">文件副本数量</th>
+            <th width="100">文件大小</th>
+            <th width="100">文件名称</th>
         </tr>
         </thead>
         <tbody>
         <tr class="text-c">
-            <td><input type="checkbox" value="1" name=""/></td>
-            <td>1</td>
-            <td>栏目添加</td>
-            <td></td>
-            <td><a title="编辑" href="javascript:;" onclick="admin_permission_edit('角色编辑','admin-permission-add.html','1','','310')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_permission_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+            <td>-rwxr-xr-x</td>
+            <td>2017年8月23日15:09</td>
+            <td>2</td>
+            <td>10M</td>
+            <td><a href="">ideaIU-2017.2.2.tar.gz</a></td>
         </tr>
+        <tr class="text-c">
+            <td>drwxr-xr-x</td>
+            <td>2017年8月23日15:09</td>
+            <td>2</td>
+            <td>10M</td>
+            <td><a href="">java</a></td>
+        </tr>
+        <tr class="text-c">
+            <td>drwxr-xr-x</td>
+            <td>2017年8月23日15:09</td>
+            <td>2</td>
+            <td>10M</td>
+            <td><a href="">hadoop</a></td>
+        </tr>
+
         </tbody>
     </table>
 </div>
