--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 单文件上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
+                    <li><a data-href="/upload/uploadOne.do" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
                     <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二</a></li>
                     <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例三</a></li>
                 </ul>
@@ -98,9 +98,9 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 多文件上传<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
+                    <li><a data-href="/upload/uploadOne.do" data-title="资讯管理" href="javascript:void(0)">案例一</a></li>
                     <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例二</a></li>
-                    <li><a data-href="article-list.html" data-title="资讯管理" href="javascript:void(0)">案例三</a></li>
+                    <li><a data-href="" data-title="案例三" href="javascript:void(0)">案例三</a></li>
                 </ul>
             </dd>
         </dl>
