--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,8 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 文件列表<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a data-href="file/list.do" data-title="文件列表" href="javascript:void(0)">文件列表</a></li>
+                    <li><a data-href="file/list-one.do" data-title="文件列表" href="javascript:void(0)">文件列表一</a></li>
+                    <li><a data-href="file/list-two.do" data-title="文件列表" href="javascript:void(0)">文件列表二</a></li>
                 </ul>
             </dd>
         </dl>
