--- a/src/main/resources/templates/picture/picture-list.html
+++ b/src/main/resources/templates/picture/picture-list.html
@@ -111,7 +111,7 @@ var setting = {
 
 var zNodes =[
 	{ id:1, pId:0, name:"一级分类", open:true},
-	{ id:11, pId:1, name:"二级分类"},
+	{ id:11, pId:1, name:"二级分类",open:true},
 	{ id:111, pId:11, name:"三级分类"},
 	{ id:112, pId:11, name:"三级分类"},
 	{ id:113, pId:11, name:"三级分类"},
