--- a/src/main/resources/templates/file/file-list-two.html
+++ b/src/main/resources/templates/file/file-list-two.html
@@ -26,47 +26,28 @@
     <div class="text-c">
         <form class="Huiform" method="post" action="" target="_self">
             <span   value="路径" style="width:120px">路径：</span>
-            <input type="text" style="width: 240px;height: 30px" />
+            <input type="text" class="input-text" name="path" id="path" style="width: 60%;height:30px;"/>&nbsp;&nbsp;
 			<button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);">确定</button>
         </form>
     </div>
     <div class="text-c" style="height: 30px;"></div>
-    <table class="table table-border table-bordered table-bg">
+    <table class="table table-border table-bordered table-bg" id="data_table">
         <thead>
         <tr>
             <th scope="col" colspan="7">文件列表</th>
         </tr>
         <tr class="text-c">
             <th width="100">文件权限</th>
-            <th width="100">最后修改时间</th>
-            <th width="100">文件副本数量</th>
             <th width="100">文件大小</th>
-            <th width="100">文件名称</th>
+            <th width="200">文件名称</th>
         </tr>
         </thead>
         <tbody>
-        <tr class="text-c">
-            <td>-rwxr-xr-x</td>
-            <td>2017年8月23日15:09</td>
-            <td>2</td>
-            <td>10M</td>
-            <td><a href="">ideaIU-2017.2.2.tar.gz</a></td>
+        <tr class="text-c" v-for="item in list">
+            <td>{{item.permission}}</td>
+            <td >{{item.fileSize}}</td>
+            <td><a href="javascript:;" class="maincolor" onclick="file_two_detail(this);">{{item.path}}</a></td>
         </tr>
-        <tr class="text-c">
-            <td>drwxr-xr-x</td>
-            <td>2017年8月23日15:09</td>
-            <td>2</td>
-            <td>10M</td>
-            <td><a href="">java</a></td>
-        </tr>
-        <tr class="text-c">
-            <td>drwxr-xr-x</td>
-            <td>2017年8月23日15:09</td>
-            <td>2</td>
-            <td>10M</td>
-            <td><a href="">hadoop</a></td>
-        </tr>
-
         </tbody>
     </table>
 </div>
@@ -80,15 +61,44 @@
 <script type="text/javascript" src="../h-ui/lib/My97DatePicker/4.8/WdatePicker.js"></script>
 <script type="text/javascript" src="../h-ui/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="../h-ui/lib/laypage/1.2/laypage.js"></script>
+<script src="https://unpkg.com/vue"></script>
 <script type="text/javascript">
-    $('.table-sort').dataTable({
-        "aaSorting": [[ 1, "desc" ]],//默认第几个排序
-        "bStateSave": true,//状态保存
-        "aoColumnDefs": [
-            //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-            {"orderable":false,"aTargets":[0,6]}// 制定列不参与排序
-        ]
+
+    var vm = new Vue({
+        el:"#data_table",
+        data:{
+            list:[]
+        },
+        mounted:function(){
+            this.getData();
+        },
+        methods:{
+            getData:function(){
+                var that = this;
+                $.ajax({
+                    data:"path="+$("#path").val(),
+                    url:"../api/file/list-two.do",
+                    success:function(data){
+                        console.log(JSON.parse(data));
+                        that.$set(that,'list',JSON.parse(data));
+                    }
+                });
+            }
+        }
+
     });
+
+    function file_two_detail(that){
+        var permission = that.parentElement.parentNode.firstChild.textContent.substr(0,1);
+        if(permission == "d"){
+            window.location.href = "../file/list-two.do?path=/"+$("#path").val();
+        }else{
+            layer_show(title,url,w,h);
+        }
+
+    }
+
+
 </script>
 </body>
 </html>
