--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,9 +34,9 @@
                 <ul class="cl">
                     <li class="dropDown dropDown_hover"><a href="javascript:;" class="dropDown_A"><i class="Hui-iconfont">&#xe600;</i> 管理 <i class="Hui-iconfont">&#xe6d5;</i></a>
                         <ul class="dropDown-menu menu radius box-shadow">
-                            <li><a href="javascript:;" onclick="article_add('添加资讯','article-add.html')">上传</a></li>
-                            <li><a href="javascript:;" onclick="picture_add('添加资讯','picture-add.html')">下载</a></li>
-                            <li><a href="javascript:;" onclick="product_add('添加资讯','product-add.html')">图片</a></li>
+                            <li><a href="javascript:;" >上传</a></li>
+                            <li><a href="javascript:;" >下载</a></li>
+                            <li><a href="javascript:;" >图片</a></li>
                         </ul>
                     <li class="navbar-levelone current"><a data-href="file/list.do" href="javascript:;void(0)">文件列表</a></li>
                     <li class="navbar-levelone"><a href="javascript:;">上传</a></li>
@@ -79,7 +79,7 @@
             <dd>
                 <ul>
                     <li><a data-href="file/list-one.do" data-title="文件列表" href="javascript:void(0)">文件列表一</a></li>
-                    <li><a data-href="file/list-two.do" data-title="文件列表" href="javascript:void(0)">文件列表二</a></li>
+                    <li><a data-href="file/list-two.do?path='/'" data-title="文件列表" href="javascript:void(0)">文件列表二</a></li>
                 </ul>
             </dd>
         </dl>
@@ -210,21 +210,6 @@
 <script type="text/javascript" src="/h-ui/lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">
     $(function(){
-        /*$("#min_title_list li").contextMenu('Huiadminmenu', {
-            bindings: {
-                'closethis': function(t) {
-                    console.log(t);
-                    if(t.find("i")){
-                        t.find("i").trigger("click");
-                    }
-                },
-                'closeall': function(t) {
-                    alert('Trigger was '+t.id+'\nAction was Email');
-                },
-            }
-        });*/
-
-
         $("body").Huitab({
             tabBar:".navbar-wrapper .navbar-levelone",
             tabCon:".Hui-aside .menu_dropdown",
@@ -244,40 +229,6 @@
             content: '<div>管理员信息</div>'
         });
     }
-
-    /*资讯-添加*/
-    function article_add(title,url){
-        var index = layer.open({
-            type: 2,
-            title: title,
-            content: url
-        });
-        layer.full(index);
-    }
-    /*图片-添加*/
-    function picture_add(title,url){
-        var index = layer.open({
-            type: 2,
-            title: title,
-            content: url
-        });
-        layer.full(index);
-    }
-    /*产品-添加*/
-    function product_add(title,url){
-        var index = layer.open({
-            type: 2,
-            title: title,
-            content: url
-        });
-        layer.full(index);
-    }
-    /*用户-添加*/
-    function member_add(title,url,w,h){
-        layer_show(title,url,w,h);
-    }
-
-
 </script>
 
 </body>
